After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681824 - Notification Plugin: fix updating for Play/Pause
Notification Plugin: fix updating for Play/Pause
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
: 664307 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-08-14 10:39 UTC by Giovanni Campagna
Modified: 2012-10-15 11:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Notification Plugin: fix updating for Play/Pause (1.75 KB, patch)
2012-08-14 10:40 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2012-08-14 10:39:54 UTC
When the playing status changes, reemit the notification. This
ensures that the central action button is correctly updated.
Comment 1 Giovanni Campagna 2012-08-14 10:40:00 UTC
Created attachment 221125 [details] [review]
Notification Plugin: fix updating for Play/Pause
Comment 2 Giovanni Campagna 2012-09-13 22:26:09 UTC
Ping?
I've been using the patch without issues for more than one month, so it should be safe, and in the particular with resident notifications in the lock screen this is quite a visible bug.
Comment 3 Jonathan Matthew 2012-09-13 22:51:16 UTC
Review of attachment 221125 [details] [review]:

Sorry, this kept slipping my mind. I think I tried something like this a long time ago and found it too annoying, but it looks like the message tray handles it much better now.
Comment 4 Giovanni Campagna 2012-09-13 22:58:18 UTC
Thank you for the review!
Attachment 221125 [details] pushed as 5f2863c - Notification Plugin: fix updating for Play/Pause
Comment 5 Volker Sobek (weld) 2012-10-15 11:53:58 UTC
*** Bug 664307 has been marked as a duplicate of this bug. ***