Notification Plugin: fix updating for Play/Pause

When the playing status changes, reemit the notification. This
ensures that the central action button is correctly updated.

https://bugzilla.gnome.org/show_bug.cgi?id=681824